file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${TRUST_ROOT}/src/Kernel/Champs_dis  ${TRUST_ROOT}/src/Kernel/Cond_Lim  ${TRUST_ROOT}/src/Kernel/Framework  ${TRUST_ROOT}/src/Kernel/Geometrie  ${TRUST_ROOT}/src/Kernel/Math/Matrices  ${TRUST_ROOT}/src/Kernel/Math/SolvSys  ${TRUST_ROOT}/src/Kernel/Math  ${TRUST_ROOT}/src/Kernel/Operateurs  ${TRUST_ROOT}/src/Kernel/Utilitaires  ${TRUST_ROOT}/src/Kernel/VF/Zones  ${TRUST_ROOT}/src/ThHyd  ${TRUST_ROOT}/src/ThSol  ${TRUST_ROOT}/src/VDF/Zones  ${TRUST_ROOT}/src/VEF/Champs  ${TRUST_ROOT}/src/VEF/Operateurs  ${TRUST_ROOT}/src/VEF/Zones )
add_library(obj_ALE OBJECT  ${srcs} )
set(listlibs ${listlibs} ALE PARENT_SCOPE    )
add_custom_target(check_sources_ALE   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity ALE" )
add_DEPENDENCIES(obj_ALE check_sources_ALE)
if(COMPIL_DYN)
  add_library(ALE SHARED   $<TARGET_OBJECTS:obj_ALE> )
  install(TARGETS ALE  DESTINATION lib)
endif(COMPIL_DYN)
