file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${TRUST_ROOT}/src/Kernel/Utilitaires  ${TRUST_ROOT}/src/Kernel/Framework  ${TRUST_ROOT}/src/Kernel/Math  ${TRUST_ROOT}/src/Kernel/Geometrie  ${TRUST_ROOT}/src/Kernel/VF/Zones  ${TRUST_ROOT}/src/VEF/Zones )
add_library(obj_UtilitairesAssemblages OBJECT  ${srcs} )
set(listlibs ${listlibs} UtilitairesAssemblages PARENT_SCOPE    )
add_custom_target(check_sources_UtilitairesAssemblages   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity UtilitairesAssemblages" )
add_DEPENDENCIES(obj_UtilitairesAssemblages check_sources_UtilitairesAssemblages)
if(COMPIL_DYN)
  add_library(UtilitairesAssemblages SHARED   $<TARGET_OBJECTS:obj_UtilitairesAssemblages> )
  install(TARGETS UtilitairesAssemblages  DESTINATION lib)
endif(COMPIL_DYN)
