file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${TRUST_ROOT}/src/Front_tracking_discontinu  ${TRUST_ROOT}/src/Kernel/Champs_dis  ${TRUST_ROOT}/src/Kernel/Cond_Lim  ${TRUST_ROOT}/src/Kernel/Framework  ${TRUST_ROOT}/src/Kernel/Geometrie  ${TRUST_ROOT}/src/Kernel/Math/Matrices  ${TRUST_ROOT}/src/Kernel/Math/SolvSys  ${TRUST_ROOT}/src/Kernel/Math  ${TRUST_ROOT}/src/Kernel/Operateurs  ${TRUST_ROOT}/src/Kernel/Utilitaires  ${TRUST_ROOT}/src/Kernel/VF/Zones  ${TRUST_ROOT}/src/ThHyd/Chimie  ${TRUST_ROOT}/src/ThHyd/Modele_turbulence_base  ${TRUST_ROOT}/src/ThHyd/Turbulence  ${TRUST_ROOT}/src/ThHyd  ${TRUST_ROOT}/src/ThSol  ${TRUST_ROOT}/src/VEF/Zones )
add_library(obj_ftdiscVEF OBJECT  ${srcs} )
set(listlibs ${listlibs} ftdiscVEF PARENT_SCOPE    )
add_custom_target(check_sources_ftdiscVEF   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity ftdiscVEF" )
add_DEPENDENCIES(obj_ftdiscVEF check_sources_ftdiscVEF)
if(COMPIL_DYN)
  add_library(ftdiscVEF SHARED   $<TARGET_OBJECTS:obj_ftdiscVEF> )
  install(TARGETS ftdiscVEF  DESTINATION lib)
endif(COMPIL_DYN)
