file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${TRUST_ROOT}/src/Kernel/Framework  ${TRUST_ROOT}/src/Kernel/Geometrie  ${TRUST_ROOT}/src/Kernel/Math  ${TRUST_ROOT}/src/Kernel/Utilitaires  ${TRUST_ROOT}/src/Kernel/VF/Zones  ${TRUST_ROOT}/src/Zoom/Kernel  ${TRUST_ROOT}/src/Zoom/Geometrie )
add_library(obj_ZoomAlgos OBJECT  ${srcs} )
set(listlibs ${listlibs} ZoomAlgos PARENT_SCOPE    )
add_custom_target(check_sources_ZoomAlgos   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity ZoomAlgos" )
add_DEPENDENCIES(obj_ZoomAlgos check_sources_ZoomAlgos)
if(COMPIL_DYN)
  add_library(ZoomAlgos SHARED   $<TARGET_OBJECTS:obj_ZoomAlgos> )
  install(TARGETS ZoomAlgos  DESTINATION lib)
endif(COMPIL_DYN)
