file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${TRUST_ROOT}/src/Kernel/Cond_Lim  ${TRUST_ROOT}/src/Kernel/Framework  ${TRUST_ROOT}/src/Kernel/Geometrie  ${TRUST_ROOT}/src/Kernel/Math  ${TRUST_ROOT}/src/Kernel/Math/Matrices  ${TRUST_ROOT}/src/Kernel/Math/SolvSys  ${TRUST_ROOT}/src/Kernel/Operateurs  ${TRUST_ROOT}/src/Kernel/Utilitaires  ${TRUST_ROOT}/src/Kernel/VF/Zones  ${TRUST_ROOT}/src/Zoom/Kernel  ${TRUST_ROOT}/src/ThHyd  ${TRUST_ROOT}/src/VDF/Zones  ${TRUST_ROOT}/src/Zoom/Algos  ${TRUST_ROOT}/src/Zoom/Geometrie )
add_library(obj_Zoomvdf OBJECT  ${srcs} )
set(listlibs ${listlibs} Zoomvdf PARENT_SCOPE    )
add_custom_target(check_sources_Zoomvdf   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity Zoomvdf" )
add_DEPENDENCIES(obj_Zoomvdf check_sources_Zoomvdf)
if(COMPIL_DYN)
  add_library(Zoomvdf SHARED   $<TARGET_OBJECTS:obj_Zoomvdf> )
  install(TARGETS Zoomvdf  DESTINATION lib)
endif(COMPIL_DYN)
