file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward   ${TRUST_ROOT}/src/Kernel/Champs   ${TRUST_ROOT}/src/Kernel/Framework   ${TRUST_ROOT}/src/Kernel/Geometrie   ${TRUST_ROOT}/src/Kernel/Math   ${TRUST_ROOT}/src/Kernel/Math/Matrices   ${TRUST_ROOT}/src/Kernel/Schemas_Temps   ${TRUST_ROOT}/src/Kernel/Statistiques_temps   ${TRUST_ROOT}/src/Kernel/Utilitaires   ${TRUST_ROOT}/src/Kernel/VF/Zones  )
add_library(obj_ZoomKernel OBJECT  ${srcs} )
set(listlibs ${listlibs} ZoomKernel PARENT_SCOPE    )
add_custom_target(check_sources_ZoomKernel   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity ZoomKernel" )
add_DEPENDENCIES(obj_ZoomKernel check_sources_ZoomKernel)
if(COMPIL_DYN)
  add_library(ZoomKernel SHARED   $<TARGET_OBJECTS:obj_ZoomKernel> )
  install(TARGETS ZoomKernel  DESTINATION lib)
endif(COMPIL_DYN)
