file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${TRUST_ROOT}/src/Kernel/Framework  ${TRUST_ROOT}/src/Kernel/Geometrie  ${TRUST_ROOT}/src/Kernel/Math  ${TRUST_ROOT}/src/Kernel/Utilitaires  ${TRUST_ROOT}/src/Zoom/Kernel )
add_library(obj_ZoomNoyau OBJECT  ${srcs} )
set(listlibs ${listlibs} ZoomNoyau PARENT_SCOPE    )
add_custom_target(check_sources_ZoomNoyau   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity ZoomNoyau" )
add_DEPENDENCIES(obj_ZoomNoyau check_sources_ZoomNoyau)
if(COMPIL_DYN)
  add_library(ZoomNoyau SHARED   $<TARGET_OBJECTS:obj_ZoomNoyau> )
  install(TARGETS ZoomNoyau  DESTINATION lib)
endif(COMPIL_DYN)
