file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${TRUST_ROOT}/src/Kernel/Framework  ${TRUST_ROOT}/src/Kernel/Geometrie  ${TRUST_ROOT}/src/Kernel/Math  ${TRUST_ROOT}/src/Kernel/Utilitaires  ${TRUST_ROOT}/src/Kernel/VF/Zones  ${TRUST_ROOT}/src/Zoom/Kernel  ${TRUST_ROOT}/src/VDF/Zones  ${TRUST_ROOT}/src/VEF/Zones )
add_library(obj_ZoomOp OBJECT  ${srcs} )
set(listlibs ${listlibs} ZoomOp PARENT_SCOPE    )
add_custom_target(check_sources_ZoomOp   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity ZoomOp" )
add_DEPENDENCIES(obj_ZoomOp check_sources_ZoomOp)
if(COMPIL_DYN)
  add_library(ZoomOp SHARED   $<TARGET_OBJECTS:obj_ZoomOp> )
  install(TARGETS ZoomOp  DESTINATION lib)
endif(COMPIL_DYN)
