file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${TRUST_ROOT}/src/Kernel/Champs  ${TRUST_ROOT}/src/Kernel/Cond_Lim  ${TRUST_ROOT}/src/Kernel/Framework  ${TRUST_ROOT}/src/Kernel/Geometrie  ${TRUST_ROOT}/src/Kernel/Math  ${TRUST_ROOT}/src/Kernel/Math/Matrices  ${TRUST_ROOT}/src/Kernel/Math/SolvSys  ${TRUST_ROOT}/src/Kernel/Operateurs  ${TRUST_ROOT}/src/Kernel/Schemas_Temps  ${TRUST_ROOT}/src/Kernel/Utilitaires  ${TRUST_ROOT}/src/Kernel/VF/Zones  ${TRUST_ROOT}/src/Zoom/Kernel  ${TRUST_ROOT}/src/ThHyd  ${TRUST_ROOT}/src/ThHyd/Modele_turbulence_base  ${TRUST_ROOT}/src/ThHyd/Turbulence  ${TRUST_ROOT}/src/ThSol  ${TRUST_ROOT}/src/VDF/Turbulence  ${TRUST_ROOT}/src/VDF/Zones  ${TRUST_ROOT}/src/Zoom/Geometrie )
add_library(obj_Zoomvdfturb OBJECT  ${srcs} )
set(listlibs ${listlibs} Zoomvdfturb PARENT_SCOPE    )
add_custom_target(check_sources_Zoomvdfturb   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity Zoomvdfturb" )
add_DEPENDENCIES(obj_Zoomvdfturb check_sources_Zoomvdfturb)
if(COMPIL_DYN)
  add_library(Zoomvdfturb SHARED   $<TARGET_OBJECTS:obj_Zoomvdfturb> )
  install(TARGETS Zoomvdfturb  DESTINATION lib)
endif(COMPIL_DYN)
